# PyPGKit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
examples/: example_repository.py
pypgkit/: __init__.py  config.py  connection.py  database.py  exceptions.py  logging.py  schema.py  setup.py  user_manager.py
pypgkit/repositories/: __init__.py  base.py
schemas/: init.sql
tests/: __init__.py  test_config.py  test_connection.py  test_database.py  test_exceptions.py  test_logging.py  test_repository.py  test_setup.py
